--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -25,7 +25,7 @@ summary(cars)
 
 You can also embed plots, for example:
 
-![](/assets/pressure-1.png)<!-- -->
+![](~/gannawag.github.io/docs/assets/pressure-1.png)<!-- -->
 
 Note that the `echo = FALSE` parameter was added to the code chunk to
 prevent printing of the R code that generated the plot.
