--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -1,3 +1,5 @@
+put the rmd file in docs put the md file in posts put the images in
+assets
 
 ## R Markdown
 
@@ -9,9 +11,7 @@ When you click the **Knit** button a document will be generated that
 includes both content as well as the output of any embedded R code
 chunks within the document. You can embed an R code chunk like this:
 
-``` r
-summary(cars)
-```
+    summary(cars)
 
     ##      speed           dist       
     ##  Min.   : 4.0   Min.   :  2.00  
@@ -25,7 +25,7 @@ summary(cars)
 
 You can also embed plots, for example:
 
-![](~/gannawag.github.io/docs/assets/pressure-1.png)<!-- -->
+![](/assets/pressure-1.png)
 
 Note that the `echo = FALSE` parameter was added to the code chunk to
 prevent printing of the R code that generated the plot.
