--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -1,3 +1,10 @@
+## File organization
+
+When making a new blog post, I edit the code, text and figures in an
+rmarkdown file (`.rmd`). I save the `.rmd` file in the `docs` folder.
+
+In the `.rmd` file header, I specify
+
 put the rmd file in docs put the md file in posts put the images in
 assets
 
