--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -5,8 +5,26 @@ rmarkdown file (`.rmd`). I save the `.rmd` file in the `docs` folder.
 
 In the `.rmd` file header, I specify
 
-put the rmd file in docs put the md file in posts put the images in
-assets
+    output: 
+      md_document
+
+    knit: (function(inputFile, encoding) {
+          out_dir <- "_posts";
+          rmarkdown::render(inputFile,
+                            encoding=encoding,
+                            output_dir=file.path(dirname(inputFile), out_dir))})
+
+This ensures two things: 1. the output is a markdown file (`.md`) which
+works with github pages 2. the `.md` file is saved in the `_posts`
+directory folder (which is where pages looks when it is processing
+posts)
+
+To process images, all images need to be saved to the `assets` folder,
+which is located within the `docs` folder. I do this with an r code
+block right below the header with the following:
+
+    knitr::opts_chunk$set(echo = TRUE)
+    knitr::opts_chunk$set(fig.path ="/assets/")
 
 ## R Markdown
 
