--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -1,7 +1,16 @@
 ## File organization
 
+There are three important pieces to get blog posts from Rstudio to
+github pages: the rmarkdown file must be located in the `docs` folder,
+it must create a markdown file in the `_posts` folder and save images in
+the `docs/assets` folder.
+
+### Rmarkdown file
+
 When making a new blog post, I edit the code, text and figures in an
 rmarkdown file (`.rmd`). I save the `.rmd` file in the `docs` folder.
+
+### Markdown file
 
 In the `.rmd` file header, I specify
 
@@ -19,6 +28,8 @@ works with github pages 2. the `.md` file is saved in the `_posts`
 directory folder (which is where pages looks when it is processing
 posts)
 
+### Images
+
 To process images, all images need to be saved to the `assets` folder,
 which is located within the `docs` folder. I do this with an r code
 block right below the header with the following:
@@ -26,31 +37,10 @@ block right below the header with the following:
     knitr::opts_chunk$set(echo = TRUE)
     knitr::opts_chunk$set(fig.path ="/assets/")
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that
-includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
-
-    summary(cars)
-
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
-
-## Including Plots
-
-You can also embed plots, for example:
+### Including Plots Example
 
 ![](/assets/pressure-1.png)
 
-Note that the `echo = FALSE` parameter was added to the code chunk to
-prevent printing of the R code that generated the plot.
+## Github
+
+Commit only the `.md` and the `assets` folder (not the `.Rmd` file).
