--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -1,6 +1,8 @@
-\##Name of the file The rmarkdown file must be named
-“YYYY-MM-DD-name-of-post.Rmd”. Github pages will automatically title the
-post “name of post” (with the dashes replaced by spaces).
+## Name of the file
+
+The rmarkdown file must be named “YYYY-MM-DD-name-of-post.Rmd”. Github
+pages will automatically title the post “name of post” (with the dashes
+replaced by spaces).
 
 ## File organization
 
