--- a/docs/_posts/2022-08-04-Test-Post.md
+++ b/docs/_posts/2022-08-04-Test-Post.md
@@ -1,3 +1,10 @@
+## github pages guide
+
+I started with the guide here:
+\[<https://pages.github.com/>\]\[<https://pages.github.com/>\].
+
+Here are some things that are important for each post…
+
 ## Name of the file
 
 The rmarkdown file must be named “YYYY-MM-DD-name-of-post.Rmd”. Github
